--- a/MusicFlow/MusicFlow.csproj
+++ b/MusicFlow/MusicFlow.csproj
@@ -20,7 +20,7 @@
     <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
     <AppxSymbolPackageEnabled>False</AppxSymbolPackageEnabled>
     <AppxBundlePlatforms>arm</AppxBundlePlatforms>
-    <AppxBundle>Always</AppxBundle>
+    <AppxBundle>Auto</AppxBundle>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -108,8 +108,8 @@
     <Compile Include="Model\BackDrop.cs" />
     <Compile Include="Model\BlurControl.cs" />
     <Compile Include="Model\ExtensionMethods.cs" />
+    <Compile Include="Model\MusicItem.cs" />
     <Compile Include="Model\MyMediaPlayer.cs" />
-    <Compile Include="Model\Song.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\AlbumDetail.xaml.cs">
       <DependentUpon>AlbumDetail.xaml</DependentUpon>
@@ -120,6 +120,9 @@
     <Compile Include="Views\AppShell.xaml.cs">
       <DependentUpon>AppShell.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\BlankPage1.xaml.cs">
+      <DependentUpon>BlankPage1.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -128,6 +131,7 @@
     <None Include="MusicFlow_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\test.jpg" />
     <Content Include="Assets\bg.jpg" />
     <Content Include="Assets\musicFlow.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -150,6 +154,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Style\MyStyles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Page>
     <Page Include="Views\AlbumDetail.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -159,6 +168,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\AppShell.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\BlankPage1.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
