--- a/MusicFlow/project.json
+++ b/MusicFlow/project.json
@@ -3,8 +3,9 @@
     "Microsoft.ApplicationInsights": "1.0.0",
     "Microsoft.ApplicationInsights.PersistenceChannel": "1.0.0",
     "Microsoft.ApplicationInsights.WindowsApps": "1.0.0",
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
-    "Win2D.uwp": "1.9.0"
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
+    "Robmikh.Util.CompositionImageLoader": "0.5.0-alpha",
+    "Win2D.uwp": "1.18.0"
   },
   "frameworks": {
     "uap10.0": {}
