--- a/MusicFlow/MusicFlow.csproj
+++ b/MusicFlow/MusicFlow.csproj
@@ -215,7 +215,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\UWP Samples\composition-master\SDK10586_NOV_UPDATE_RTM\Microsoft.UI.Composition.Toolkit\Microsoft.UI.Composition.Toolkit.vcxproj">
+    <ProjectReference Include="..\Microsoft.UI.Composition.Toolkit\Microsoft.UI.Composition.Toolkit.vcxproj">
       <Project>{08a7d060-593a-4978-8dcc-b2029aca7c95}</Project>
       <Name>Microsoft.UI.Composition.Toolkit</Name>
     </ProjectReference>
