changed tiles and title

--- a/MusicFlow/MusicFlow.csproj
+++ b/MusicFlow/MusicFlow.csproj
@@ -132,7 +132,7 @@
     <None Include="MusicFlow_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Assets\bg.jpg" />
+    <Content Include="Assets\asd[610].png" />
     <Content Include="Assets\NewStoreLogo.scale-100.png" />
     <Content Include="Assets\NewStoreLogo.scale-125.png" />
     <Content Include="Assets\NewStoreLogo.scale-150.png" />
